fixed dashboard contrast

--- a/src/app/pages/dashboard/dashboard.scss
+++ b/src/app/pages/dashboard/dashboard.scss
@@ -1,4 +1,4 @@
 .card{
-    background-color: white;
+    //background-color: white;
     height: 100%;
 }
